<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2EBF2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.zedTech.zeeshanamin3.StudyAbroad.ThirdStep">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal"
                >


                <ImageView
                    android:id="@+id/musician_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/musician_banner"/>

                <ImageView
                    android:id="@+id/medical_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/medical_banner"
                    />

                <ImageView
                    android:id="@+id/business_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/business_banner"
                    />

                <ImageView
                    android:id="@+id/pilot_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="12dp"
                    android:src="@drawable/pilot_banner"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#006064"
                android:elevation="2dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/step3_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="56sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#006064"
                android:elevation="2dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/step3_subtitle"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:fontFamily="sans-serif-light"
                android:padding="20dp"
                android:text="@string/step3_body"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:fontFamily="sans-serif-light"
                android:padding="20dp"
                android:text="@string/step3_body2"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="12dp"
                android:scaleType="center"
                android:src="@drawable/down_arrow"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#006064"
                android:elevation="2dp"/>


            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="visitCollegeBoardPage"
                android:text="@string/collegeBoard_text"
                android:textAllCaps="false"
                android:textColor="#006064"
                android:textSize="24sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#006064"
                android:elevation="2dp"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="visitCollegeViewPage"
                android:text="@string/collegeView_text"
                android:textAllCaps="false"
                android:textColor="#006064"
                android:textSize="24sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#006064"
                android:elevation="2dp"/>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="visitEducationsPage"
                android:text="@string/educations.com_text"
                android:textAllCaps="false"
                android:textColor="#006064"
                android:textSize="24sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#006064"
                android:elevation="2dp"/>



            <CheckBox
                android:id="@+id/third_step_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:fontFamily="sans-serif-light"
                android:padding="12dp"
                android:text="@string/step3_checkbox"
                android:textSize="16sp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp"
                android:background="#006064"
                android:onClick="nextStep"
                android:text="@string/nextStep_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/drawer_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:textColor="#006064"
        >

        <ListView
            android:id="@+id/navList"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#E0F7FA"
            android:padding="12dp"
            />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
