<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2EBF2">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.zedTech.zeeshanamin3.StudyAbroad.EndActivity">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/end_background"
                />

            <TextView
                android:id="@+id/title_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-regular"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="50dp"
                android:text="@string/end_activity_title"
                android:textColor="#006064"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_end"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="24dp"
                android:paddingTop="12dp"
                android:text="@string/end_activity_subtitle"
                android:textColor="#006064"
                android:textSize="32sp"
                />

            <TextView
                android:id="@+id/end_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subhead"
                android:background="#00BCD4"
                android:fontFamily="sans-serif-medium"
                android:padding="32dp"
                android:text="@string/end_body"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/end_body"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="#006064"
                android:onClick="shareApp"
                android:text="@string/share_button"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>


        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/drawer_view"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:textColor="#006064"
        >

        <ListView
            android:id="@+id/navList"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#E0F7FA"
            android:padding="12dp"
            />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>